--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,25 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "cannon-es": "^0.19.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
-    "three": "^0.150.0",
-    "cannon-es": "^0.19.0"
+    "react-scripts": "^5.0.1",
+    "three": "^0.150.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
