--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,19 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "cannon-es": "^0.19.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
     "three": "^0.150.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.0.0",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6"
   },
   "browserslist": {
     "production": [
