--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.6",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefix": "^1.0.1",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   },
   "browserslist": {
