--- a/backend/db/mongodb-service.yaml
+++ b/backend/db/mongodb-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mongodb-service
 spec:
   selector:
-    app: mongodb
+    app: mongodb-service
   ports:
     - protocol: TCP
       port: 27017
