--- a/backend/feed_data/k8s/feed-data-service.yaml
+++ b/backend/feed_data/k8s/feed-data-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: formula-service
+  name: feed-data
   labels:
-    app: formula
+    app: feed-data
 spec:
   selector:
-    app: formula
+    app: feed-data
   ports:
     - port: 8080
       targetPort: 8080
