--- a/backend/mongo-feed-data/mongo-feed-data-service.yaml
+++ b/backend/mongo-feed-data/mongo-feed-data-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb-service
+  name: mongo-feed-data-service
 spec:
   selector:
-    app: mongodb-service
+    app: mongo-feed-data-service
   ports:
     - protocol: TCP
       port: 27017
