--- a/backend/mongo-user-data/mongo-user-data-pvc.yaml
+++ b/backend/mongo-user-data/mongo-user-data-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongodb-service-pvc
+  name: mongo-user-data-service-pvc
 spec:
   accessModes:
     - ReadWriteOnce
