added correct user data main

--- a/backend/user-data-service/Dockerfile
+++ b/backend/user-data-service/Dockerfile
@@ -1,19 +1,10 @@
-# Start from Go base image
-FROM golang:1.21-alpine
-
+FROM golang:1.24-alpine AS build
 WORKDIR /app
 
-# Install git (needed for go get) and ca-certificates for HTTPS
-RUN apk update && apk add --no-cache git ca-certificates && update-ca-certificates
-
-COPY go.mod ./
-COPY go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-
 RUN go build -o user-data-service
 
-EXPOSE 8080
-
-CMD ["./user-data-service"]
+CMD ["/app/user-data-service"]
