--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "cannon-es": "^0.19.0",
     "lucide-react": "^0.475.0",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.29.0",
     "three": "^0.173.0"
