--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.18.0",
     "@shadcn/ui": "^0.0.4",
     "cannon-es": "^0.19.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.1",
