--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -1,17 +1,30 @@
-name: Go Services CI
+# .github/workflows/go-services.yml
+name: Build & push Go services
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    branches: ["main"]
+    paths:
+      - "backend/**"
+  workflow_dispatch:
 
 jobs:
-  build-and-format:
+  build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        path:
+          - backend/user-data-service
+          - backend/feed-data-service
+          - backend/evaluation-service
+
+    defaults:
+      run:
+        working-directory: ${{ matrix.path }}
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Go
@@ -19,22 +32,24 @@ jobs:
         with:
           go-version: "1.21"
 
-      - name: Install dependencies
-        run: go mod tidy
-
-      - name: Format Go code
+      - name: Tidy & build
         run: |
-          go fmt ./...
+          go mod tidy
+          go vet ./...
+          go test ./...
+          go build -o app
 
-      - name: Build all services
-        run: |
-          mkdir -p build
-          for service in user-data-service feed-data-service evaluation-service; do
-            echo "Building $service..."
-            cd $service
-            go build -o "../build/$service"
-            cd ..
-          done
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: List built binaries
-        run: ls -l build/
+      - name: Build & push image
+        if: github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.path }}
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USER }}/${{ matrix.path##*/ }}:latest
