--- a/backend/user-data-service/Dockerfile
+++ b/backend/user-data-service/Dockerfile
@@ -1,10 +1,17 @@
-FROM golang:1.24-alpine AS build
+FROM golang:1.21-alpine
+
 WORKDIR /app
 
-COPY go.mod go.sum ./
+RUN apk update && apk add --no-cache git ca-certificates && update-ca-certificates
+
+COPY go.mod ./
+COPY go.sum ./
 RUN go mod download
 
 COPY . .
+
 RUN go build -o user-data-service
 
-CMD ["/app/user-data-service"]
+EXPOSE 8080
+
+CMD ["./user-data-service"]
