--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - "backend/**.go"
       - "backend/**/go.mod"
+      - "backend/**/Dockerfile"
       - ".github/workflows/go-ci.yml"
   pull_request:
 
@@ -39,3 +40,25 @@ jobs:
 
       - name: Build binary
         run: go build -v ./...
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract service name
+        id: extract
+        run: |
+          SERVICE_NAME=$(echo ${{ matrix.service }} | sed 's/backend\///')
+          echo "name=${SERVICE_NAME}" >> $GITHUB_OUTPUT
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.service }}
+          push: true
+          tags: dragomir1401/${{ steps.extract.outputs.name }}:latest
