[BE] added build and push in workflow

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -6,13 +6,12 @@ on:
       - "backend/**.go"
       - "backend/**/go.mod"
       - "backend/**/Dockerfile"
-      - "backend/**/k8s/*.yaml"
       - ".github/workflows/go-ci.yml"
   pull_request:
 
 jobs:
   build-test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -28,25 +27,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Setup kubectl
-        run: |
-          echo "Setting up kubectl configuration..."
-          docker ps | findstr "kindest/node"
-          
-          $env:KUBECONFIG="$HOME\.kube\config"
-          echo "KUBECONFIG set to: $env:KUBECONFIG"
-          
-          kubectl config use-context kind-visioscience
-          echo "Using context: kind-visioscience"
-
-      - name: Verify kubectl access
-        run: |
-          echo "Verifying kubectl access..."
-          kubectl config view
-          kubectl cluster-info
-          kubectl get nodes
-          echo "Kubectl access verified successfully"
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -83,18 +63,3 @@ jobs:
           context: ${{ matrix.service }}
           push: true
           tags: dragomir1401/${{ steps.extract.outputs.name }}:latest
-
-      - name: Deploy to Kubernetes
-        run: |
-          echo "Starting deployment for ${{ steps.extract.outputs.name }}..."
-          if [ -d "k8s" ]; then
-            echo "Found k8s configuration, applying..."
-            kubectl apply -f k8s/
-            
-            echo "Waiting for deployment to complete..."
-            kubectl rollout status deployment/${{ steps.extract.outputs.name }} -n default
-            
-            echo "Deployment completed successfully for ${{ steps.extract.outputs.name }}"
-          else
-            echo "No k8s configuration found for ${{ steps.extract.outputs.name }}"
-          fi
