--- a/backend/monitoring-service/config/prometheus.yml
+++ b/backend/monitoring-service/config/prometheus.yml
@@ -6,17 +6,17 @@ scrape_configs:
   - job_name: 'user-data-service'
     static_configs:
       - targets: ['user-data-service:8081']
-    metrics_path: '/metrics'
+    metrics_path: '/user/metrics'
 
   - job_name: 'feed-data-service'
     static_configs:
       - targets: ['feed-data-service:8080']
-    metrics_path: '/metrics'
+    metrics_path: '/feed/metrics'
 
   - job_name: 'evaluation-service'
     static_configs:
       - targets: ['evaluation-service:8080']
-    metrics_path: '/metrics'
+    metrics_path: '/evaluation/metrics'
 
   - job_name: 'prometheus'
     static_configs:
