--- a/backend/monitoring-service/k8s/service.yaml
+++ b/backend/monitoring-service/k8s/service.yaml
@@ -113,12 +113,12 @@ data:
     scrape_configs:
       - job_name: 'user-data-service'
         static_configs:
-          - targets: ['user-data-service:8081']
+          - targets: ['user-data:8081']
         metrics_path: '/user/metrics'
 
       - job_name: 'feed-data-service'
         static_configs:
-          - targets: ['feed-data-service:8080']
+          - targets: ['feed-data:8080']
         metrics_path: '/feed/metrics'
 
       - job_name: 'evaluation-service'
