--- a/backend/monitoring-service/k8s/service.yaml
+++ b/backend/monitoring-service/k8s/service.yaml
@@ -92,6 +92,8 @@ spec:
             - name: grafana-config
               mountPath: /etc/grafana/grafana.ini
               subPath: grafana.ini
+            - name: grafana-storage
+              mountPath: /var/lib/grafana
       volumes:
         - name: grafana-datasources
           configMap:
@@ -99,6 +101,9 @@ spec:
         - name: grafana-config
           configMap:
             name: grafana-config
+        - name: grafana-storage
+          persistentVolumeClaim:
+            claimName: grafana-pvc
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -218,3 +223,14 @@ data:
     enabled = true
     org_name = Main Org.
     org_role = Viewer 
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: grafana-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi 
