--- a/backend/portainer/portainer.yaml
+++ b/backend/portainer/portainer.yaml
@@ -1,3 +1,30 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: portainer-sa
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: portainer-role
+rules:
+  - apiGroups: ["*"]
+    resources: ["*"]
+    verbs: ["*"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: portainer-role-binding
+subjects:
+  - kind: ServiceAccount
+    name: portainer-sa
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: portainer-role
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,6 +41,7 @@ spec:
       labels:
         app: portainer
     spec:
+      serviceAccountName: portainer-sa
       containers:
         - name: portainer
           image: portainer/portainer-ce:latest
@@ -22,6 +50,21 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /data
+          env:
+            - name: PORTAINER_EDGE
+              value: "0"
+            - name: PORTAINER_EDGE_ASYNC
+              value: "0"
+            - name: PORTAINER_EDGE_INSECURE_POLL
+              value: "0"
+            - name: PORTAINER_EDGE_INACTIVITY_TIMEOUT
+              value: "5m"
+            - name: PORTAINER_EDGE_POLLING_INTERVAL
+              value: "5s"
+            - name: PORTAINER_BASE_URL
+              value: "/portainer"
+            - name: PORTAINER_SERVE_FROM_SUBPATH
+              value: "true"
       volumes:
         - name: data
           emptyDir: {}
@@ -48,10 +91,19 @@ kind: Ingress
 metadata:
   name: portainer-ingress
   annotations:
-    konghq.com/strip-path: "true"
+    konghq.com/strip-path: "false"
     konghq.com/protocols: "http,https"
     konghq.com/preserve-host: "true"
-    konghq.com/plugins: "portainer-cors"
+    konghq.com/connect-timeout: "60000"
+    konghq.com/read-timeout: "60000"
+    konghq.com/write-timeout: "60000"
+    konghq.com/retries: "5"
+    konghq.com/rewrite: "/portainer"
+    konghq.com/healthchecks.active.type: "http"
+    konghq.com/healthchecks.active.http_path: "/portainer/api/status"
+    konghq.com/healthchecks.active.timeout: "5"
+    konghq.com/healthchecks.active.concurrency: "10"
+    konghq.com/healthchecks.active.interval: "10"
 spec:
   ingressClassName: kong
   rules:
@@ -64,33 +116,3 @@ spec:
                 name: portainer-service
                 port:
                   number: 9000
----
-apiVersion: configuration.konghq.com/v1
-kind: KongPlugin
-metadata:
-  name: portainer-cors
-  annotations:
-    kubernetes.io/ingress.class: kong
-plugin: cors
-config:
-  origins:
-    - "*"
-  methods:
-    - GET
-    - POST
-    - PUT
-    - DELETE
-    - OPTIONS
-  headers:
-    - Accept
-    - Accept-Version
-    - Content-Length
-    - Content-MD5
-    - Content-Type
-    - Date
-    - Authorization
-  exposed_headers:
-    - Content-Length
-    - Content-Type
-  credentials: true
-  max_age: 3600
